<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
            android:id="@+id/tvPlease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/please"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvItwill"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16000003"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/tvItwill"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginBottom="32dp"
            android:text="@string/itwill"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/ivSelfie"
            app:layout_constraintTop_toBottomOf="@+id/tvPlease"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"/>

    <ImageView
            android:id="@+id/ivSelfie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:minWidth="100dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/u"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btnselfie"
            app:layout_constraintTop_toBottomOf="@+id/tvItwill"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>

    <Button
            android:id="@+id/btnselfie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@color/orange"
            android:drawableStart="@drawable/cc"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="Take a selfie"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tvRefferal"
            app:layout_constraintTop_toBottomOf="@+id/ivSelfie"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"/>

    <TextView
            android:id="@+id/tvRefferal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doyou"
            android:textColor="@color/orange"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
            app:layout_constraintTop_toBottomOf="@+id/btnselfie"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="32dp"/>

    <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/orange"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"/>


</android.support.constraint.ConstraintLayout>